[gd_scene load_steps=21 format=2]

[ext_resource path="res://Telas/FundoTela2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/TatarugaMedio.png" type="Texture" id=2]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Cenas/Scripts/Escolha.gd" type="Script" id=4]
[ext_resource path="res://Sprites/TartarugaDificil.png" type="Texture" id=5]
[ext_resource path="res://Cenas/Transicao.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sons/confirmacao.wav" type="AudioStream" id=7]
[ext_resource path="res://Sons/hover.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets2/Icones/SetaNova2.png" type="Texture" id=9]
[ext_resource path="res://Assets2/Icones/Setanova.png" type="Texture" id=10]
[ext_resource path="res://Sons/voltar.wav" type="AudioStream" id=11]
[ext_resource path="res://Sprites/Hoverdificil.png" type="Texture" id=12]
[ext_resource path="res://Assets2/IconsUI/contorno.png" type="Texture" id=13]
[ext_resource path="res://Sprites/tartarugaFacil.png" type="Texture" id=14]
[ext_resource path="res://Sprites/HOvermedio.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Hoverfacil.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 55
outline_size = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 55
outline_size = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 70
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Transicao" parent="." instance=ExtResource( 6 )]
layer = 0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -606.666, 152.296 )
scale = Vector2( 6.66667, 6.67887 )
texture = ExtResource( 1 )
offset = Vector2( 187, 31 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 1, 0.979688, 0.949219, 1 )
margin_left = 112.0
margin_top = 176.0
margin_right = 221.0
margin_bottom = 216.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 13 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Botaofacil" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 208.0
margin_right = 223.0
margin_bottom = 322.0
rect_scale = Vector2( 3.5, 3.5 )
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 16 )
expand = true
stretch_mode = 3

[node name="Botaomedio" type="TextureButton" parent="."]
margin_left = 480.0
margin_top = 208.0
margin_right = 576.0
margin_bottom = 322.0
rect_scale = Vector2( 3.5, 3.5 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 15 )
expand = true
stretch_mode = 3

[node name="Botaodificil" type="TextureButton" parent="."]
margin_left = 816.0
margin_top = 208.0
margin_right = 920.0
margin_bottom = 322.0
rect_scale = Vector2( 3.5, 3.5 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 3

[node name="ldfacil" type="Label" parent="."]
margin_left = 186.0
margin_top = 214.0
margin_right = 385.0
margin_bottom = 295.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Fácil"
align = 1
valign = 1

[node name="ldmedio" type="Label" parent="."]
margin_left = 528.0
margin_top = 208.0
margin_right = 784.0
margin_bottom = 296.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Médio"
align = 1
valign = 1

[node name="lddificil" type="Label" parent="."]
margin_left = 896.0
margin_top = 208.0
margin_right = 1104.0
margin_bottom = 297.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Difícil"
align = 1
valign = 1

[node name="Dificuldade" type="Label" parent="."]
margin_left = 384.0
margin_top = 42.0
margin_right = 898.0
margin_bottom = 162.0
custom_colors/font_color = Color( 0.952941, 0.898039, 0.760784, 1 )
custom_fonts/font = SubResource( 4 )
text = "Dificuldade"
align = 1
valign = 1

[node name="SomConfirmar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="SomHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="SomVoltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -13.0

[node name="BotaoVoltar" type="TextureButton" parent="."]
margin_right = 48.0
margin_bottom = 32.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 9 )
stretch_mode = 5

[connection signal="mouse_entered" from="Botaofacil" to="." method="_on_Botaofacil_mouse_entered"]
[connection signal="pressed" from="Botaofacil" to="." method="_on_Botaofacil_pressed"]
[connection signal="mouse_entered" from="Botaomedio" to="." method="_on_Botaomedio_mouse_entered"]
[connection signal="pressed" from="Botaomedio" to="." method="_on_Botaomedio_pressed"]
[connection signal="mouse_entered" from="Botaodificil" to="." method="_on_Botaodificil_mouse_entered"]
[connection signal="pressed" from="Botaodificil" to="." method="_on_Botaodificil_pressed"]
[connection signal="mouse_entered" from="BotaoVoltar" to="." method="_on_BotaoVoltar_mouse_entered"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
